
* Added new mc_t_two_sample function to cogent.maths.stats.test that performs a
  two-sample t-test and uses Monte Carlo permutations to determine
  nonparametric significance (similar to R's Deducer::perm.t.test).

* Added guppy 1.1, pplacer 1.1, ParsInsert 1.04, usearch 5.2.32, rtax 0.981,
  and raxml 7.3.0 application controllers.

Changes
-------

* Minimum Vienna package version now set to 1.8.5

* The pearson function in cogent.maths.stats.test has more robust
  error-checking.

* The mantel and mantel_test functions in cogent.maths.stats.test now check for
  symmetric, hollow distance matrices as input by default, with an option to
  disable these checks.

* cogent.draw.distribution_plots now uses matplotlib proxy Artists for legend
  creation (this simplifies the code a bit). Added ability to set the size of
  plot figures through two new optional parameters to generate_box_plots and
  generate_comparative_plots. More robust checks have been put in place in
  case making room for labels fails (this now uses matplotlib 1.1.0's new
  tight_layout() functionality, but this can still fail in some cases).

* cogent.app.raxml (version 7.0.3) is now deprecated and will be removed in
  1.6.0. Please use cogent.app.raxml_v730 instead (version 7.3.0).

Bug Fixes
---------

* improve handling of reading frames from Ensembl
* actually included the test_ensembl/test_metazoa.py file that was
  accidentally overlooked.
* fixed small diff in postcript output from RNAfold
* Deprecation and discontinued warnings are now not ignored by default.
  cogent.util.warning was ignored in Python 2.7 because it uses
  DeprecationWarnings. These warnings are temporarily forced to not be ignored.

Cogent 1.5 - 1.5.1
==================

New Features
------------

* Alignments can now add sequences that are pairwise aligned to a sequence
  already present in the alignment.
* Alignment.addSeqs has more flexibility with the specific order of sequences