@@ -2,8 +2,13 @@
 #file test_parse.py
 from numpy import array
 from cogent.util.unit_test import TestCase, main
-from cogent.maths.stats.rarefaction import subsample, naive_histogram, wrap_numpy_histogram, \
-    rarefaction
+from cogent.maths.stats.rarefaction import (subsample,
+                                            naive_histogram,
+                                            wrap_numpy_histogram,
+                                            rarefaction,
+                                            subsample_freq_dist_nonzero,
+                                            subsample_random,
+                                            subsample_multinomial)
 
 __author__ = "Rob Knight"
 __copyright__ = "Copyright 2007-2012, The Cogent Project"
@@ -23,8 +28,87 @@ class TopLevelTests(TestCase):
         self.assertEqual(subsample(a,5), array([0,5,0]))
         self.assertEqual(subsample(a,2), array([0,2,0]))
         b = array([2,0,1])
+        
+        # selecting 2 counts from the vector 1000 times yields each of the 
+        # two possible results at least once each
+        b = array([2,0,1])
+        actual = {}
+        for i in range(1000):
+            e = subsample(b,2)
+            actual[tuple(e)] = None
+        self.assertEqual(actual, {(1,0,1):None,(2,0,0):None})
+        
         obs = subsample(b,2)
         assert (obs == array([1,0,1])).all() or (obs ==  array([2,0,0])).all()
+    
+    def test_subsample_freq_dist_nonzero(self):
+        """subsample_freq_dist_nonzero should return a random subsample of a vector
+        """
+        a = array([0,5,0])
+        self.assertEqual(subsample_freq_dist_nonzero(a,5), array([0,5,0]))
+        self.assertEqual(subsample_freq_dist_nonzero(a,2), array([0,2,0]))
+        
+        # selecting 35 counts from the vector 1000 times yields each at least
+        # two different results
+        b = array([2,0,1,2,1,8,6,0,3,3,5,0,0,0,5])
+        actual = {}
+        for i in range(100):
+            e = subsample_freq_dist_nonzero(b,35)
+            self.assertTrue(e.sum(),35)
+            actual[tuple(e)] = None
+        self.assertTrue(len(actual) > 1)
+        
+        # selecting 2 counts from the vector 1000 times yields each of the 
+        # two possible results at least once each (note that an issue with an 
+        # inital buggy version of subsample_freq_dist_nonzero was detected with
+        # this test, so don't remove - )
+        b = array([2,0,1])
+        actual = {}
+        for i in range(1000):
+            e = subsample_freq_dist_nonzero(b,2)
+            actual[tuple(e)] = None
+            self.assertTrue(e.sum() == 2)
+        self.assertEqual(actual, {(1,0,1):None,(2,0,0):None})
+
+    def test_subsample_random(self):
+        """subsample_random should return a random subsample of a vector
+        """
+        a = array([0,5,0])
+        self.assertEqual(subsample_random(a,5), array([0,5,0]))
+        self.assertEqual(subsample_random(a,2), array([0,2,0]))
+        
+        # selecting 35 counts from the vector 1000 times yields each at least
+        # two different results
+        b = array([2,0,1,2,1,8,6,0,3,3,5,0,0,0,5])
+        actual = {}
+        for i in range(100):
+            e = subsample_random(b,35)
+            self.assertTrue(e.sum(),35)
+            actual[tuple(e)] = None
+        self.assertTrue(len(actual) > 1)
+        
+        # selecting 2 counts from the vector 1000 times yields each of the 
+        # two possible results at least once each
+        b = array([2,0,1])
+        actual = {}
+        for i in range(1000):
+            e = subsample_random(b,2)
+            actual[tuple(e)] = None
+            self.assertTrue(e.sum() == 2)
+        self.assertEqual(actual, {(1,0,1):None,(2,0,0):None})
+
+    def test_subsample_multinomial(self):
+        """subsample_multinomial should return a random subsample of a vector
+        """
+        # selecting 35 counts from the vector 1000 times yields each at least
+        # two different results
+        actual = {}
+        for i in range(100):
+            b = array([2,0,1,2,1,8,6,0,3,3,5,0,0,0,5])
+            e = subsample_multinomial(b,35)
+            self.assertTrue(e.sum(),35)
+            actual[tuple(e)] = None
+        self.assertTrue(len(actual) > 1)
 
     def test_naive_histogram(self):
         """naive_histogram should produce expected result"""
