@@ -25,6 +25,9 @@ New Features
 * Added guppy 1.1, pplacer 1.1, ParsInsert 1.04, usearch 5.2.32, rtax 0.981,
   and raxml 7.3.0 application controllers.
 
+* Added new functions to cogent.maths.stats.rarefaction that provide
+  alternative ways to perform rarefaction subsampling.
+
 Changes
 -------
 
@@ -46,6 +49,11 @@ Changes
 
 * cogent.app.raxml (version 7.0.3) is now deprecated and will be removed in
   1.6.0. Please use cogent.app.raxml_v730 instead (version 7.3.0).
+
+* Updated cogent.app.muscle to handle a change in the muscle command line
+  options in 3.8. This only affects tree-building. Added max memory option.
+
+* Updated cogent.app.uclust to handle --stepwords and --w.
 
 Bug Fixes
 ---------
